Revision history for Dist-Zilla-Plugin-OurPkgVersion

{{$NEXT}}

0.20      2019-05-24
  - Fix git deploy snafoo (plicease--)

0.19      2019-05-24
  - Fix regression related to version_provider plugins (gh#15, gh#16)

0.18      2019-05-22
  - Fix git deploy snafoo (plicease--)

0.17      2019-05-22
  - Fix prereqs: some developer prereqs were leaking into the list of test
    prereqs (gh#13, gh#14)

0.16      2019-05-21
  - Add semantic_version option.

0.15      2019-04-16
  - Add overwrite option (gh#9, gh#10, nrdvana++)
  - Require Dist::Zilla 6.00 and perl 5.14 (gh#5, gh#11)

0.14      2019-02-06
  - Fix bug where nw underscore_eval_version may fail
  - add skip_main_module option for compatibility with VersionFromMainModule

0.12      2017-07-11
  - Add underscore_eval_version property

0.11      2017-07-02
  - use :PerlExecFiles filefinder whenever possible

0.10      2016-06-21
  - Production release identical to 0.09_01

0.09_01   2016-06-20
  - Also accept perltidy "special side comments" syntax.  Please note
    that things may break if your dist has the pattern '## VERSION'
    in a .pm file (iansealy GH# 2)

0.08      2016-04-24
  - Dist::Zilla 5.x / 6.x and future 7.x compatability

0.07      2016-03-07
  - Use Dist::Zilla::Role::PPI to avoid reparsing documents (new GH #1)

0.06      2015-05-04
  - Use [Test::ReportPrereqs] instead of [ReportVersions::Tiny] to remove
    deprecation warning during dzil build.
  - Use new github repository in meta

0.005001  2013-12-16
	- update compile test so that it doesn't hang on windows GH #11 ( chorny )
	- add contributors plugins

0.005000  2013-09-07
	- allow comment to be #VERSION
	  - Github Issue #9
	  - Reported by Jakob Voss ( nichtich )

0.004000  2012-05-31
	- skip parsing .pod files Github Issue #6
	- Change comment to read TRIAL VERSION for trial releases
	  Github Issue #7
	  Patch by Christopher J. Madsen

0.003002  2012-01-02
	- skip if PPI unable to parse

0.003001  2012-01-01