@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-OurPkgVersion
 
 {{$NEXT}}
+  - Add no_critic option
 
 0.20      2019-05-24
   - Fix git deploy snafoo (plicease--)
